--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             <a href="#contact" class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Start a Perception Audit</a>
             <button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/vvashist2590'});return false;" class="rounded-2xl border border-zinc-300 px-5 py-3 text-sm">Book a call</button>
           </div>
-          <p class="mt-3 text-xs text-zinc-500">Quick MVP — live tonight. Replace placeholders + deploy (see instructions below).</p>
         </div>
         <div class="glass rounded-3xl p-6 shadow-sm">
           <h3 class="font-medium">Signals we strengthen</h3>
@@ -66,7 +65,6 @@
             <li class="rounded-xl border border-zinc-200 p-3">Activity</li>
             <li class="rounded-xl border border-zinc-200 p-3">Community</li>
           </ul>
-          <p class="mt-3 text-xs text-zinc-600">Mapped to a simple dashboard + rituals your team can run.</p>
         </div>
       </div>
     </div>
@@ -155,7 +153,7 @@
             <textarea name="message" rows="4" class="mt-1 w-full rounded-xl border border-zinc-300 px-3 py-2" placeholder="Perception audit / visibility / launch / media architecture"></textarea>
           </label>
           <button class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Send</button>
-          <p class="text-xs text-zinc-500">Or WhatsApp: <a class="underline" href="https://wa.me/918800686480">+91‑YOUR‑NUMBER</a></p>
+          <p class="text-xs text-zinc-500">Or WhatsApp: <a class="underline" href="https://wa.me/918800686480">+91‑8800686480</a></p>
         </form>
         <!-- Calendly inline (swap URL) -->
         <div class="rounded-2xl border border-zinc-200 p-5">
