--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p class="mt-3 text-base text-zinc-600">If you’ve felt your work deserves more recognition than it gets — you’re in the right place.</p>
           <p class="mt-2 text-lg text-zinc-700">Most good work goes unseen. We make sure yours doesn't — not through noise, but through signals people can’t ignore. We work beneath PR's surface, at the human triggers that make ideas travel.</p>
           <div class="mt-6 flex gap-3">
-            <a href="#contact" class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Not sure how you’re really seen? Get your Perception Audit — clarity you can use tomorrow.</a>
+            <a href="#contact" class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Know how you’re really seen — start your Perception Audit</a>
             <button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/vvashist2590'});return false;" class="rounded-2xl border border-zinc-300 px-5 py-3 text-sm">Book a call</button>
           </div>
         </div>
@@ -232,7 +232,7 @@
       <p class="mt-2 text-sm text-zinc-600">Tell us where you’re stuck. We’ll listen first.</p>
       <div class="mt-6 grid md:grid-cols-2 gap-8">
         <!-- TODO: set your real Formspree endpoint ID -->
-        <form action="https://formspree.io/f/FORM_ID" method="POST" class="rounded-2xl border border-zinc-200 p-5 space-y-3">
+        <form action="https://formspree.io/f/xdkdrvdk" method="POST" class="rounded-2xl border border-zinc-200 p-5 space-y-3">
           <input type="hidden" name="_subject" value="New enquiry — The Perception Studio" />
           <label class="block text-sm">Name
             <input required name="name" class="mt-1 w-full rounded-xl border border-zinc-300 px-3 py-2"/>
