--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     "description":"Perception Architecture for founders, institutions, and emerging voices. We design how people respond to you.",
     "founder":{"@type":"Person","name":"Vivek Vashist"},
     "foundingDate":"2025-01-01",
-    "email":"hello@theperception.studio",
+    "email":"connect@theperception.studio",
     "contactPoint":[{
-      "@type":"ContactPoint","contactType":"inquiries","email":"hello@theperception.studio","telephone":"+91-8800686480","areaServed":"IN"
+      "@type":"ContactPoint","contactType":"inquiries","email":"connect@theperception.studio","telephone":"+91-8800686480","areaServed":"IN"
     }]
   }
   </script>
@@ -155,7 +155,7 @@
             <p class="mt-3 text-base text-zinc-600">If you’ve felt your work deserves more recognition than it gets — you’re in the right place.</p>
             <p class="mt-2 text-lg text-zinc-700">Most good work goes unseen. We make sure yours doesn't — not through noise, but through signals people can’t ignore. We work beneath PR's surface, at the human triggers that make ideas travel.</p>
             <div class="mt-6 flex gap-3">
-              <a href="#contact" class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Not sure how you’re really seen? Get your Perception Audit — clarity you can use tomorrow.</a>
+              <a href="#contact" class="rounded-2xl bg-zinc-900 text-white px-5 py-3 text-sm">Know how you’re really seen — start your Perception Audit</a>
               <button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/vvashist2590'});return false;" class="rounded-2xl border border-zinc-300 px-5 py-3 text-sm">Book a call</button>
             </div>
           </div>
@@ -163,13 +163,13 @@
           <!-- Perception Compass (interactive; no stray 'RE') -->
           <div class="glass rounded-3xl p-6 shadow-sm" id="compass">
             <h3 class="font-medium" id="compass-title">Perception Compass</h3>
-            <p class="mt-2 text-sm text-zinc-600">Six signals that work together. Move one, all respond.</p>
+            <p class="mt-2 text-sm text-zinc-600">Six signals that work together.</p>
 
             <div class="mt-4 relative mx-auto" style="height:300px" aria-labelledby="compass-title">
               <!-- Center -->
               <div id="compass-center"
                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border border-zinc-300 px-4 py-2 text-xs bg-white relative select-none focus:outline-none"
-                   role="button" tabindex="0" aria-label="Reset compass needle">Response</div>
+                   role="button" tabindex="0" aria-label="Reset compass needle"></div>
 
               <!-- Needle -->
               <svg id="compass-needle" class="absolute inset-0 w-full h-full pointer-events-none" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
