--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <div id="err" class="alert err">Hmm, something went wrong. Please check required fields and try again.</div>
 
         <!-- Form -->
-        <form id="multiForm" action="https://formspree.io/f/xdkdrvdk" method="POST" enctype="multipart/form-data" accept-charset="UTF-8" novalidate>
+        <form id="multiForm" action="https://formspree.io/f/mblkvewe" method="POST" enctype="multipart/form-data" accept-charset="UTF-8" novalidate>
           <input type="hidden" name="_subject" value="New Collaborator Entry Brief" />
           <!-- <input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you"> -->
 
