--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
 
         <!-- Form -->
         <form id="multiForm" action="https://formspree.io/f/mvgqjjbq" method="POST" enctype="multipart/form-data" accept-charset="UTF-8" novalidate>
-          <input type="hidden" name="_subject" value="New Collaborator Entry Brief" />
+          <input type="email" name="email" required>
+  <button type="submit">Join</button>
           <!-- <input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you"> -->
 
           <!-- STEP 1 -->
